--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "server.js",
   "scripts": {
-    "start": "nodemon src/server.js",
+    "start": "node NODE_ENV=production src/server.js",
+    "start:dev": "nodemon src/server.js",
     "test": "cross-env NODE_ENV=test jest"
   },
   "keywords": [],
